<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login.SignUpActivity">

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/club_name" />

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText

        android:id="@+id/passwordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/small_padding" />

    <EditText
        android:id="@+id/passwordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/small_padding" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submit"
        android:layout_marginBottom="10dp"
        android:padding="@dimen/small_padding"
        android:text="@string/sign_up" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signIn"
        android:text="@string/sign_in" />

</LinearLayout>