<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainFunctionsActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:onClick="buyEndavans"
        android:text="@string/buy_endavans"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:weightSum="100">

        <EditText
            android:id="@+id/depositEndavans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:hint="Endavans to deposit"
            android:inputType="number"
            android:padding="@dimen/padding_functions"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:onClick="depositEndavans"
            android:padding="@dimen/padding_functions"
            android:text="@string/deposit_endavans"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">


        <EditText
            android:id="@+id/withdrawEndavans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:hint="@string/endavans_to_withdraw"
            android:inputType="number"
            android:padding="@dimen/padding_functions"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:onClick="withdrawEndavans"
            android:padding="@dimen/padding_functions"
            android:text="@string/withdraw_endavans"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:onClick="payDebt"
        android:text="@string/pay_debt"
        android:textSize="16sp" />

</LinearLayout>